k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-server
---
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
---
apiVersion: v1
kind: Namespace
metadata:
  name: mq
---
apiVersion: v1
kind: Namespace
metadata:
  name: user
---
apiVersion: v1
kind: Namespace
metadata:
  name: campaign
---
apiVersion: v1
kind: Namespace
metadata:
  name: community
